--- a/roles/m4e/defaults/main/moodle.yml
+++ b/roles/m4e/defaults/main/moodle.yml
@@ -1,14 +1,18 @@
 ---
 # moodle app
-app_image: quay.io/krestomatio/moodle_app
-app_container: true
-# moodle config
+moodle_image: quay.io/krestomatio/moodle_app
+moodle_container: true
+moodle_app: /var/www/html
+moodle_data: /var/moodledata
+moodle_config_path: /config
+moodle_config_autosync: true
+# moodle config.php
 moodle_config_dbhost: "{{ meta.name }}-postgres"
 moodle_config_dbname: "{{ database_name }}"
 moodle_config_dbuser: "{{ database_user }}"
 moodle_config_dbpass: "{{ database_password }}"
 moodle_config_wwwroot: "http://{{ host }}.{{ domain }}"
-moodle_config_dataroot: "/var/moodledata"
+moodle_config_dataroot: "{{ moodle_data }}"
 # moodle_config_context_cache_max_size: 7500
 # moodle_config_dbtype: pgsql
 # moodle_config_dblibrary: native
