--- a/roles/m4e/tasks/sync_config.yml
+++ b/roles/m4e/tasks/sync_config.yml
@@ -1,7 +1,15 @@
 - name: keep config.php update without need of pod restart
   when: moodle_config_autosync
-  copy:
-    remote_src: true
-    src: "{{ moodle_config_path }}/config.php"
-    dest: "{{ moodle_app }}/config.php"
-    mode: preserve
+  block:
+  - name: check config.php exists from src
+    stat:
+      path: "{{ moodle_config_path }}/config.php"
+    register: moodle_config_autosync_file
+
+  - name: copy config.php to dest
+    when: moodle_config_autosync_file.stat.exists
+    copy:
+      remote_src: true
+      src: "{{ moodle_config_path }}/config.php"
+      dest: "{{ moodle_app }}/config.php"
+      mode: preserve
