all: variables for more customization

--- a/playbook.yml
+++ b/playbook.yml
@@ -8,5 +8,4 @@
     - import_role:
         name: "m4e"
 
-- import_playbook: sync_config.yml
-  when: moodle_config_autosync | default(true)
+- import_playbook: php-fpm.yml
