--- a/roles/m4e/defaults/main/php-fpm.yml
+++ b/roles/m4e/defaults/main/php-fpm.yml
@@ -3,6 +3,10 @@
 php_fpm_size: 1
 php_fpm_image: quay.io/krestomatio/moodle_php-fpm
 php_fpm_state: "{{ state }}"
+php_fpm_appname: "{{ meta.name }}-php-fpm"
+php_fpm_secret: "{{php_fpm_appname }}-secret"
+php_fpm_service: "{{ php_fpm_appname }}-service"
+php_fpm_deploy: "{{ php_fpm_appname }}-deploy"
 php_fpm_readiness_probe: true
 php_fpm_readiness_command: "['/usr/libexec/check-container', '-t', '-r']"
 php_fpm_readiness_initial: 5
@@ -33,7 +37,7 @@ php_fpm_service_spec: |
     protocol: TCP
     targetPort: 9000
   selector:
-    app: '{{ meta.name }}-php-fpm'
+    app: '{{ php_fpm_appname }}'
 php_fpm_pvc_spec: |
   accessModes:
     - 'ReadWriteOnce'
