--- a/roles/m4e/tasks/inventory.yml
+++ b/roles/m4e/tasks/inventory.yml
@@ -2,22 +2,23 @@
 - name: refresh dynamic inventory
   meta: refresh_inventory
 
-- name: "Get pods information until {{ info_until }}"
+- name: wait until condition for pods info
   when: info_until is defined
-  k8s_info:
-    kind: Pod
-    namespace: "{{ meta.namespace }}"
-    label_selectors: "{{ label_selectors if label_selectors is defined else omit }}"
-    field_selectors: "{{ field_selectors if field_selectors is defined else omit }}"
-  until: "{{ info_until }}"
-  delay: "{{ info_delay | default(5)  }}"
-  retries: "{{ info_retries | default(6) }}"
-  register: k8s_info_until
+  block:
+  - name: "Get pods information until {{ info_until | default('condition') }}"
+    k8s_info:
+      kind: Pod
+      namespace: "{{ meta.namespace }}"
+      label_selectors: "{{ label_selectors if label_selectors is defined else omit }}"
+      field_selectors: "{{ field_selectors if field_selectors is defined else omit }}"
+    until: "{{ info_until }}"
+    delay: "{{ info_delay | default(5)  }}"
+    retries: "{{ info_retries | default(6) }}"
+    register: k8s_info_until
 
-- name: save pod_list
-  when: info_until is defined
-  set_fact:
-    pod_list: "{{ k8s_info_until.resources }}"
+  - name: save pod_list
+    set_fact:
+      pod_list: "{{ k8s_info_until.resources }}"
 
 - name: Get pods information
   when: info_until is not defined
@@ -34,15 +35,23 @@
     pod_list: "{{ k8s_info.resources }}"
 
 - name: Add host
-  with_items: "{{ pod_list }}"
+  with_subelements:
+    - "{{ pod_list }}"
+    - status.containerStatuses
+  when:
+    - item.1.ready
   changed_when: false
   add_host:
     groups:
+      - "{{ item.0.metadata.name | replace('-', '_') }}"
       - pods
-      - "{{ item.metadata.labels.app | replace('-', '_') }}"
-      - "{{ item.metadata.labels['app.kubernetes.io/component'] | replace('-', '_') }}"
+      - "{{ item.0.metadata.labels.app | replace('-', '_') }}"
+      - "{{ item.0.metadata.labels['app.kubernetes.io/component'] | replace('-', '_') }}"
       - "{{ namespace | replace('-', '_') }}"
-    name: "{{ item.metadata.name }}"
+    name: "{{ item.0.metadata.name }}__{{ item.1.name }}"
+    ansible_kubectl_pod: "{{ item.0.metadata.name }}"
+    ansible_kubectl_container: "{{ item.1.name }}"
     ansible_kubectl_namespace: "{{ namespace }}"
     ansible_connection: kubectl
     ansible_remote_tmp: /var/tmp/.ansible
+    state: "{{ item.1.state }}"
