moodle: instantiate moodle using a job

--- a/deploy/crds/m4e.krestomatio.com_v1alpha1_m4e_cr_testing.yaml
+++ b/deploy/crds/m4e.krestomatio.com_v1alpha1_m4e_cr_testing.yaml
@@ -12,3 +12,4 @@ spec:
   httpd_image: image-registry.openshift-image-registry.svc:5000/osdk-test/moodle_httpd
   php_fpm_image: image-registry.openshift-image-registry.svc:5000/osdk-test/moodle_php-fpm
   postgres_image: image-registry.openshift-image-registry.svc:5000/osdk-test/postgres
+  moodle_new_instance_agree_license: true
