--- a/roles/m4e/defaults/main/moodle.yml
+++ b/roles/m4e/defaults/main/moodle.yml
@@ -10,6 +10,26 @@ moodle_uri: "{{ host }}.{{ domain }}"
 moodle_protocol: "{{ 'https' if expose_tls else 'http' }}"
 moodle_url: "{{ moodle_protocol }}://{{ moodle_uri }}"
 moodle_config_autosync: true
+moodle_new_instance_lang: en
+moodle_new_instance_fullname: Demo site
+moodle_new_instance_shortname: demo
+moodle_new_instance_summary: A demo site
+moodle_new_instance_adminuser: admin
+moodle_new_instance_adminpass: secret
+moodle_new_instance_adminmail: admin@example.com
+moodle_new_instance_agree_license: false
+moodle_new_instance_job: "{{ meta.name }}-moodle-new-instance-job"
+moodle_new_instance_cmd:
+  php admin/cli/install_database.php
+    --lang="{{ moodle_new_instance_lang }}"
+    --fullname="{{ moodle_new_instance_fullname }}"
+    --shortname="{{ moodle_new_instance_shortname }}"
+    --summary="{{ moodle_new_instance_summary }}"
+    --adminuser="{{ moodle_new_instance_adminuser }}"
+    --adminpass="${MOODLE_adminpass}"
+    --adminemail="{{ moodle_new_instance_adminmail }}"
+    --agree-license
+moodle_new_instance_readiness_command: "['/usr/libexec/check-container', '-t', '-c', '-m']"
 # moodle config.php
 moodle_config_dbhost: "{{ postgres_service }}"
 moodle_config_dbname: "{{ database_name }}"
