--- a/roles/m4e/tasks/inventory.yml
+++ b/roles/m4e/tasks/inventory.yml
@@ -2,41 +2,20 @@
 - name: refresh dynamic inventory
   meta: refresh_inventory
 
-- name: wait until condition for pods info
-  when: info_until is defined
-  block:
-  - name: "Get pods information until {{ info_until | default('condition') }}"
-    k8s_info:
-      kind: Pod
-      namespace: "{{ meta.namespace }}"
-      label_selectors: "{{ label_selectors if label_selectors is defined else omit }}"
-      field_selectors: "{{ field_selectors if field_selectors is defined else omit }}"
-    until: "{{ info_until }}"
-    delay: "{{ info_delay | default(5)  }}"
-    retries: "{{ info_retries | default(6) }}"
-    register: k8s_info_until
-
-  - name: save pod_list
-    set_fact:
-      pod_list: "{{ k8s_info_until.resources }}"
-
-- name: Get pods information
-  when: info_until is not defined
+- name: "Get pods information"
   k8s_info:
     kind: Pod
     namespace: "{{ meta.namespace }}"
     label_selectors: "{{ label_selectors if label_selectors is defined else omit }}"
     field_selectors: "{{ field_selectors if field_selectors is defined else omit }}"
-  register: k8s_info
-
-- name: save pod_list
-  when: info_until is not defined
-  set_fact:
-    pod_list: "{{ k8s_info.resources }}"
+  until: "{{ k8s_info_until | default(true) }}"
+  delay: "{{ k8s_info_delay | default(0)  }}"
+  retries: "{{ k8s_info_retries | default(0) }}"
+  register: k8s_info_pods
 
 - name: Add host
   with_subelements:
-    - "{{ pod_list }}"
+    - "{{ k8s_info_pods.resources }}"
     - status.containerStatuses
   when:
     - item.1.ready
