--- a/roles/m4e/defaults/main/php-fpm.yml
+++ b/roles/m4e/defaults/main/php-fpm.yml
@@ -27,6 +27,7 @@ php_fpm_resource_requests_memory: 256Mi
 php_fpm_resource_limits: true
 php_fpm_resource_limits_cpu: 1
 php_fpm_resource_limits_memory: 1Gi
+php_fpm_term_grace_period: 30
 php_fpm_secret_data: |
   moodle_new_instance_adminpass: '{{ moodle_new_instance_adminpass | b64encode }}'
   config_php: '{{ lookup('template', moodle_config_template) | b64encode }}'
