--- a/roles/m4e/defaults/main/postgres.yml
+++ b/roles/m4e/defaults/main/postgres.yml
@@ -28,6 +28,7 @@ postgres_resource_requests_memory: 256Mi
 postgres_resource_limits: true
 postgres_resource_limits_cpu: 1
 postgres_resource_limits_memory: 1Gi
+postgres_term_grace_period: 30
 postgres_secret_data: |
   database_password: '{{ database_password | b64encode }}'
 postgres_service_spec: |
