--- a/roles/m4e/tasks/php-fpm.yml
+++ b/roles/m4e/tasks/php-fpm.yml
@@ -74,3 +74,32 @@
       metadata_name: "{{ php_fpm_deploy }}"
       deploy_spec: "{{ php_fpm_deploy_spec }}"
     import_tasks: k8s.yml
+
+  - name: set moodle cronjob spec
+    when: moodle_cronjob_spec is not defined
+    set_fact:
+      moodle_cronjob_spec: "{{ lookup('template', moodle_cronjob_spec_template) }}"
+
+  - name: moodle cronjob resource definition
+    vars:
+      kind: CronJob
+      k8s_state: "{{ moodle_cronjob_state | default(php_fpm_state) }}"
+      template: "{{ cronjob_template }}"
+      metadata_name: "{{ moodle_cronjob }}"
+      metadata_app: "{{ php_fpm_appname }}"
+      cronjob_spec: "{{ moodle_cronjob_spec }}"
+    import_tasks: k8s.yml
+
+  - name: remove any remaining jobs and its pods in php-fpm app
+    loop:
+      - Job
+      - Pod
+    vars:
+      k8s_definition: "{{ lookup('k8s', kind=item, namespace=meta.namespace,
+        label_selector='job-name,app=' + php_fpm_appname ) }}"
+    when:
+      - (k8s_definition | length) > 0
+      - "(moodle_cronjob_state | default(php_fpm_state)) == 'absent'"
+    k8s:
+      definition: "{{ k8s_definition }}"
+      state: absent
