--- a/roles/m4e/tasks/httpd.yml
+++ b/roles/m4e/tasks/httpd.yml
@@ -30,12 +30,27 @@
     import_tasks: k8s.yml
 
   - name: httpd route resource definition
-    when: "expose_as == 'route'"
+    when:
+      - expose_type is defined and expose_type
+      - "(expose_type | lower) == 'route'"
     vars:
       kind: Route
       k8s_state: "{{ httpd_route_state | default(httpd_state) }}"
       template: "{{ route_template }}"
       metadata_name: "{{ httpd_route }}"
-      annotations: "{{ httpd_route_annotations }}"
+      annotations: "{{ httpd_route_annotations | default(false) }}"
       route_spec: "{{ httpd_route_spec }}"
+    import_tasks: k8s.yml
+
+  - name: httpd route resource definition
+    when:
+      - expose_type is defined and expose_type
+      - "(expose_type | lower) == 'ingress'"
+    vars:
+      kind: Ingress
+      k8s_state: "{{ httpd_ingress_state | default(httpd_state) }}"
+      template: "{{ ingress_template }}"
+      metadata_name: "{{ httpd_ingress }}"
+      annotations: "{{ httpd_ingress_annotations | default(false) }}"
+      ingress_spec: "{{ httpd_ingress_spec }}"
     import_tasks: k8s.yml
