--- a/playbook.yml
+++ b/playbook.yml
@@ -8,4 +8,30 @@
     - import_role:
         name: "m4e"
 
-- import_playbook: php-fpm.yml
+- hosts: localhost
+  gather_facts: no
+  collections:
+    - community.kubernetes
+    - operator_sdk.util
+  tasks:
+    - name: refresh inventory with running pods
+      vars:
+        add_host_no_log: true
+        field_selectors:
+          - status.phase=Running
+        label_selectors:
+          - "app = {{ meta.name }}-php-fpm"
+      import_role:
+        name: "m4e"
+        tasks_from: inventory.yml
+
+- hosts: php_fpm
+  gather_facts: no
+  collections:
+    - community.kubernetes
+    - operator_sdk.util
+  tasks:
+    - name: import task to keep in sync moodle config
+      include_role:
+        name: "m4e"
+        tasks_from: sync_config.yml
