nginx: nginx replaced httpd

--- a/deploy/crds/m4e.krestomatio.com_v1alpha1_m4e_cr.yaml
+++ b/deploy/crds/m4e.krestomatio.com_v1alpha1_m4e_cr.yaml
@@ -4,6 +4,6 @@ metadata:
   name: example-m4e
 spec:
   # Add fields here
-  httpd_size: 1
+  nginx_size: 1
   php_fpm_size: 1
   moodle_new_instance_agree_license: true
