--- a/roles/m4e/defaults/main/nginx.yml
+++ b/roles/m4e/defaults/main/nginx.yml
@@ -9,15 +9,16 @@ nginx_deploy: "{{ nginx_appname }}-deploy"
 nginx_route: "{{ nginx_appname }}-route"
 nginx_ingress: "{{ nginx_appname }}-ingress"
 nginx_port: 8080
+nginx_args: "['nginx', '-g', 'daemon off;']"
 nginx_readiness_probe: true
-nginx_readiness_command: "['/usr/libexec/check-container', '-r']"
+nginx_readiness_command: "['/usr/libexec/check-container-nginx', '-r']"
 nginx_readiness_initial: 5
 nginx_readiness_period: 30
 nginx_readiness_timeout: 3
 nginx_readiness_success: 1
 nginx_readiness_failure: 6
 nginx_liveness_probe: true
-nginx_liveness_command: "['/usr/libexec/check-container', '-l']"
+nginx_liveness_command: "['/usr/libexec/check-container-nginx', '-l']"
 nginx_liveness_initial: 5
 nginx_liveness_period: 10
 nginx_liveness_timeout: 3
