feat(operator-sdk): upgrade to operator-sdk 1.1.0

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,14 @@
-/.test
+
+# Binaries for programs and plugins
+*.exe
+*.exe~
+*.dll
+*.so
+*.dylib
+bin
+
+# editor and IDE paraphernalia
+.idea
+*.swp
+*.swo
+*~
