--- a/roles/m4e/defaults/main/postgres.yml
+++ b/roles/m4e/defaults/main/postgres.yml
@@ -3,7 +3,7 @@
 postgres_size: 1
 postgres_image: quay.io/krestomatio/postgres
 postgres_state: "{{ state }}"
-postgres_appname: "{{ meta.name }}-postgres"
+postgres_appname: "{{ ansible_operator_meta.name }}-postgres"
 postgres_pvc: "{{ postgres_appname }}-pvc"
 postgres_secret: "{{ postgres_appname }}-secret"
 postgres_service: "{{ postgres_appname }}-service"
