--- a/roles/m4e/defaults/main/main.yml
+++ b/roles/m4e/defaults/main/main.yml
@@ -1,7 +1,7 @@
 ---
 # defaults file for m4e
 state: present
-host: "{{ meta.name }}{{ '-' + meta.namespace if meta.namespace is defined else '' }}"
+host: "{{ ansible_operator_meta.name }}{{ '-' + ansible_operator_meta.namespace if ansible_operator_meta.namespace is defined else '' }}"
 domain: "apps-crc.testing"
 expose_type: "ingress"  # only route
 expose_tls: false
