--- a/roles/m4e/defaults/main/php-fpm.yml
+++ b/roles/m4e/defaults/main/php-fpm.yml
@@ -3,7 +3,7 @@
 php_fpm_size: 1
 php_fpm_image: quay.io/krestomatio/moodle_web
 php_fpm_state: "{{ state }}"
-php_fpm_appname: "{{ meta.name }}-php-fpm"
+php_fpm_appname: "{{ ansible_operator_meta.name }}-php-fpm"
 php_fpm_service: "{{ php_fpm_appname }}-service"
 php_fpm_deploy: "{{ php_fpm_appname }}-deploy"
 php_fpm_args: "['php-fpm']"
