--- a/roles/m4e/meta/main.yml
+++ b/roles/m4e/meta/main.yml
@@ -1,8 +1,8 @@
 ---
 galaxy_info:
-  author: your name
-  description: your description
-  company: your company (optional)
+  author: Job Céspedes Ortiz
+  description: Role to handle Moodle with Ansible Operator SDK
+  company: Krestomatio
 
   # If the issue tracker for your role is not on github, uncomment the
   # next line and provide a value
@@ -15,7 +15,7 @@ galaxy_info:
   # - GPLv3
   # - Apache
   # - CC-BY
-  license: license (GPLv2, CC-BY, etc)
+  license: Apache
 
   min_ansible_version: 2.9
 
