refactor: change url host part variables

--- a/roles/m4e/defaults/main/main.yml
+++ b/roles/m4e/defaults/main/main.yml
@@ -3,6 +3,7 @@
 state: present
 host: "{{ ansible_operator_meta.name }}{{ '-' + ansible_operator_meta.namespace if ansible_operator_meta.namespace is defined else '' }}"
 domain: "apps-crc.testing"
+fqdn: "{{ host }}.{{ domain }}"
 expose_type: "ingress"  # only route
 expose_tls: false
 
