--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -6,6 +6,9 @@ driver:
 lint: |
   set -e
   yamllint -d "{extends: relaxed, rules: {line-length: {max: 120}}}" .
+  yamllint roles/*
+  ansible-lint roles/*
+  flake8 roles/*
 platforms:
   - name: cluster
     groups:
