--- a/molecule/default/tasks/m4e_test.yml
+++ b/molecule/default/tasks/m4e_test.yml
@@ -13,7 +13,16 @@
   vars:
     cr_file: 'm4e_v1alpha1_m4e.yaml'
 
-- name: Add assertions here
-  assert:
-    that: false
-    fail_msg: FIXME Add real assertions for your operator
+- name: Remove the m4e.krestomat.io/v1alpha1.M4e
+  when: cr_removal
+  k8s:
+    state: absent
+    namespace: '{{ namespace }}'
+    definition: "{{ lookup('template', '/'.join([samples_dir, cr_file])) | from_yaml }}"
+  vars:
+    cr_file: 'm4e_v1alpha1_m4e.yaml'
+
+# - name: Add assertions here
+#   assert:
+#     that: false
+#     fail_msg: FIXME Add real assertions for your operator
